Deletar item da lista de itens

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,8 +13,9 @@
 
 <ion-content [fullscreen]="true">
   <ion-list lines="full">
-    <ion-item *ngFor="let item of items" (click)="viewItem(item)" class="item">
+    <ion-item *ngFor="let item of items; let i = index" (click)="viewItem(item)" class="item">
       <ion-label class="item-text">{{ item.title }}</ion-label>
+      <ion-icon name="trash-outline" slot="end" (click)="removeItem(i)"></ion-icon>
     </ion-item>
   </ion-list>  
 </ion-content>
