--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,9 +13,10 @@
 
 <ion-content [fullscreen]="true">
   <ion-list lines="full">
-    <ion-item *ngFor="let item of items; let i = index" (click)="viewItem(item)" class="item">
+    <ion-item *ngFor="let item of items" (click)="viewItem(item.id)" class="item">
       <ion-label class="item-text">{{ item.title }}</ion-label>
-      <ion-icon name="trash-outline" slot="end" (click)="removeItem(i)"></ion-icon>
+      <ion-icon name="pencil-outline" slot="end" (click)="editItem(item.id); $event.stopPropagation()"></ion-icon>
+      <ion-icon name="trash-outline" slot="end" (click)="removeItem(item.id)"></ion-icon>
     </ion-item>
   </ion-list>  
 </ion-content>
